# serialize-fields

./: .gitignore  Cargo.toml  README.md  t.rs
serialize_fields/: Cargo.toml
serialize_fields/examples/: api_filtering.rs  basic_usage.rs
serialize_fields/src/: lib.rs  macros.rs
serialize_fields/tests/: integration_tests.rs  macros_tests.rs
serialize_fields_macro/: Cargo.toml
serialize_fields_macro/src/: lib.rs
