[package]
name = "serialize_fields"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serialize_fields_macro = { version = "0.2.0", path = "../serialize_fields_macro" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio.workspace = true

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "api_filtering"
path = "examples/api_filtering.rs"

[[example]]
name = "dynamic_fields"
path = "examples/dynamic_fields.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]