[package]
name = "serialize_fields_macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
description = "Procedural macros for serialize_fields crate"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[features]
schemars = []

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
serde.workspace = true